fixed broken CSS elements, now need to add documentation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,9 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+}
+
+.content-attribute {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -81,22 +84,13 @@ p {
     color: #ffffff;
 }
 
-.content img {
-    max-height: 200px
-}
-
-.content h2 {
+.content-attribute h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+.content-attribute img{
+    max-height: 200px;
 }
 
 .search-engine-optimization img {
@@ -139,16 +133,21 @@ p {
     color: #ffffff;
 }
 
-.benefits h3 {
+.benefits-h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefits img {
+.benefits-img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+.benefits-attributes {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
 
 .benefit-lead {
     margin-bottom: 32px;
@@ -165,7 +164,7 @@ p {
     color: #ffffff;
 }
 
-.benefit-lead h3 {
+.benefit-attributes h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -180,7 +179,7 @@ p {
     text-align: center;
 }
 
-.benefit-lead img {
+.benefit-attributes img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
